--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,8 @@ html {
   
   .main_img {
   background-color: black;
-  height: 100vh;
-  width: 100vw;
-  padding-right: 2rem;
-  padding-left: 2rem;
+  height: 99h;
+  width: 99vw;
   
   }
   
@@ -36,8 +34,6 @@ html {
     width: 100%;
     object-fit: cover;
     z-index: -5;
-    opacity: 80%;
-    padding: 1rem;
       
       }
   
