--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,8 @@ html {
   
   .main_img {
   background-color: black;
-  height: 99h;
-  width: 99vw;
+  height: 100vh;
+  width: 100vw;
   
   }
   
