--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -18,7 +18,7 @@ html {
     align-items: center;
 
     .bg-image {
-        background-image: url('/assets/img/main.jpg');
+        background-image: url('../assets/img/LogoTCS.png');
         background-size: cover;
         min-height: 100vh;
         min-width: 100vw;
@@ -64,19 +64,23 @@ html {
     }
 }
 
-@media screen and (max-width: 768px) {
-    .box {
-        height: 50vh;
-        width: 60vw;
-    }
-    .logo {
-        height: 12vh;
-    }
-    h1 {
-        font-size: 2rem;
-    }
+@media (min-width: 30em) and (max-width: 50em) {
+    .container {
+        .bg-image {
+            .box {
+                height: 50vh;
+                width: 60vw;
+            }
+            .logo {
+                height: 12vh;
+            }
+            h1 {
+                font-size: 2rem;
+            }
 
-    p {
-        font-size: .75rem;
+            p {
+                font-size: .75rem;
+            }
+        }
     }
 }
