--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -18,7 +18,7 @@ html {
     align-items: center;
 
     .bg-image {
-        background-image: url('../assets/img/LogoTCS.png');
+        background-image: url('../assets/img/main.jpg');
         background-size: cover;
         min-height: 100vh;
         min-width: 100vw;
