--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -137,6 +137,25 @@ nav {
             object-fit: cover;
           }
       }
+
+/* ------------ MENU ------------ */
+.card {
+    width: 22rem;
+    .card-img {
+        height: 20rem;
+        width: 22rem;
+        .card-img-top{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        
+        .latte{
+            object-position: 0px 80%;
+        }
+    }
+}
+
         
 /* ------------ FOOTER ------------ */
 footer {
