--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -19,9 +19,8 @@ $breakpoints: (
     box-sizing: border-box;
 }
 
-html {
-    font-family: 'Poppins', sans-serif;
-    background-color: black;
+body {
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* ------------ NAVEGACION ------------ */
@@ -49,7 +48,7 @@ nav {
 
         > * {
             display: flex;
-            font-family: 'Poppins' sans-serif;
+            font-family: 'Montserrat', sans-serif;
             justify-content: center;
             align-items: center;
             position: absolute;
@@ -84,6 +83,7 @@ nav {
         
             h1{
                 font-size: 3.5rem;
+                font-weight:bold;
 
                 @include media(sm){
                     font-size: 1.75rem; }
@@ -107,7 +107,7 @@ nav {
     /* ------------ TITULO DE CADA PAGINA ------------ */
     .titulo {
         color: $olive;
-        font-weight: 800;
+        font-weight: bold;
         font-size: 3rem;
         position: relative;
         display:flex;
@@ -148,34 +148,71 @@ nav {
       }
 
 /* ------------ MENU ------------ */
-.card {
-    width: 22rem;
-    .card-img {
-        height: 20rem;
-        width: 22rem;
-        .card-img-top{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+.menu {
+    display:flex;
+    justify-content: center;
+    align-content: center;
         
-        .latte{
-            object-position: 0px 80%;
+    .container {
+        display: inline-flex;
+        flex-flow: row wrap;
+        margin: 2rem;
+        @include media(sm){
+            display:flex;
+            flex-direction: column;
+        }    
+              
+            .card {
+                font-size: .7rem;
+                flex-basis: 22rem;
+                justify-content: center;
+                @include media(sm){
+                    font-size: .8rem;
+                }
+                .card-img {
+                    height: 22rem;
+                    
+                    .card-img-top{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                    .latte{
+                        object-position: 0px 80%;
+                    }
+                }
+                tbody {
+                    font-size: .7rem;
+                }
+            }
         }
     }
-}
+
+    /* ------------ NOSOTROS ------------ */
+    main.us {
+        display:flex;
+        justify-content: center;
+        align-content: center;
+        .row {
+            @include media(md){
+                display: flex;
+                flex-direction: column;
+            }
+        }
+    }
+
+
 
  /* ------------ FORMULARIO DE CONTACTO ------------ */
  main.contacto {
-    display:inline-flex;
-    flex-direction: row;
+    display:flex;
     justify-content: center;
     align-content: center;
-    width: 100%;
+
     @include media(md){
         display:flex;
         flex-direction: column;
-        margin: 2rem; 
+        margin: 1rem; 
         width: 90vw;
     }
     section.container-md {
